# mwe_packet_type_handling

./: .gitignore  .gitmodules  combine_logs.py
client/: .parse_logs_config.json  CMakeLists.txt
client/src/: main.cpp
client/src/meta_program/: meta_program.hpp
client/src/networking/packet_types/: packet_types.hpp
client/src/networking/packets/: packets.hpp
client/src/packet_types/: packet_types.hpp
server/: .parse_logs_config.json  CMakeLists.txt  log_message_transform.py
server/src/: main.cpp
server/src/meta_program/: meta_program.cpp  meta_program.hpp
shared/: flinks.py  flinks.py.ifile  symlinks.txt
shared/packet_types/: sbpt.ini
